# twinPics-desktop

./: .gitignore  Cargo.toml  tauri.conf.json
icons/: icon.icns
src/: commands.rs  lib.rs  main.rs
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: CentralPanel.tsx  MatchCard.tsx  MatchResults.tsx  RightPanel.tsx  Sidebar.tsx
ui/src/components/tabs/: SearchByColorTab.tsx  SearchByImageTab.tsx  SearchByTextTab.tsx
ui/src/components/ui/: slider.tsx
ui/src/context/: IndexContext.tsx  SearchSettingsContext.tsx  TextSearchQueryContext.tsx
ui/src/lib/: pathUtils.ts  twinpicsClient.ts
